<resources>
    <string name="app_name">AgentAIDemo</string>

    <string name="update_usercare_status">Update AgentAI Status</string>
    <string name="usercare_buttons">\nAgentAI buttons</string>
    <string name="buy_click">Buy a click</string>
    <string name="send_custom_event">Send custom event</string>
    <string name="send_crash_event">Send crash event</string>
    <string name="send_chat_message">Send chat message</string>
    <string name="clear_cached_data">Clear cached data</string>

    <!-- Deep link. Please don't change variable names . -->
    <string name="uc_deep_link_intent_filter_label">AgentAI (or your own dev. label)</string>

        <!-- Host of your compay Agent.ai Domain. You can find it there  https://my.agent.ai/publisher/company_info/ -->
        <string name="uc_deep_link_host">yourcompanyaidomain-dl.agent.ai</string>

        <!-- /dl/yourcompanyaidomain/yourpublisherid/faqs
        yourpublisherid you can find it there  https://my.agent.ai/apps/-->
    <string name="uc_deep_link_faq_details">/dl/yourcompanyaidomain/yourpublisherid/faqs</string>
    <string name="uc_deep_link_section_faq">/dl/yourcompanyaidomain/yourpublisherid/section_faq</string>
    <string name="uc_deep_link_chat">/dl/yourcompanyaidomain/yourpublisherid/chat</string>
    <string name="uc_deep_link_tickets">/dl/yourcompanyaidomain/yourpublisherid/tickets</string>
    <string name="uc_deep_link_landing_page">/dl/yourcompanyaidomain/yourpublisherid/landing_page</string>
    <string name="uc_deep_link_viplounge">/dl/yourcompanyaidomain/yourpublisherid/viplounge</string>
    <!-- Deep link -->
</resources>
